Fixed navigation display issues on mobile

--- a/components/nav/sidebar.module.scss
+++ b/components/nav/sidebar.module.scss
@@ -1,7 +1,7 @@
 .sideBar {
   background: var(--background-dark);
 
-  height: 100vh;
+  height: 100%;
 
   position: sticky;
   top: 0px;
@@ -15,6 +15,18 @@
 
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+
+  .wrapper {
+    position: fixed;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: scroll;
+
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 
   a {
     height: 100px;
